# Mise

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
data/: chefai.db  mise.db
docs/: ARCHITECTURE_PROPOSAL.md
scripts/: ai_test_workflow.py
src/chefai/: __init__.py  config.py
src/chefai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/chefai/cli/: __init__.py  main.py
src/chefai/db/: __init__.py  models.py
src/mise/: __init__.py  config.py
src/mise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/mise/ai/: __init__.py  base.py  ollama.py  openai.py  prompts.py  registry.py
src/mise/auth/: __init__.py  auth.py  models.py
src/mise/cli/: __init__.py  main.py
src/mise/db/: __init__.py  crud.py  database.py  models.py
src/mise/email/: __init__.py  sender.py  verification.py
src/mise/meal/: __init__.py  planner.py  suggestions.py
src/mise/scraper/: __init__.py  base.py  kaufland.py  lidl.py  registry.py  tesco.py
src/mise/user/: __init__.py  preferences.py  profile.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  discovery.py  reporter.py  test_auto_smoke.py  test_full_journey.py
tests/e2e/scenarios/: __init__.py  test_auth_flows.py  test_db_flows.py  test_edge_cases.py  test_meal_flows.py  test_multi_user.py  test_profile_flows.py  test_scrape_flows.py
