[project]
name = "chefai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
chefai = "chefai.cli:app"
chef = "chefai.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
