[project]
name = "mise"
version = "0.1.0"
description = "Mise – smart food discount tracker (from 'mise en place')"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "openai>=2.41.1",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "bcrypt>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-mock>=3.14",
    "pytest-html>=4.1",
]

[project.scripts]
mise = "mise.cli.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
